alignment fixes, multi graph legends still broken (WIP)

--- a/beams/src/components/QuickSearch.css
+++ b/beams/src/components/QuickSearch.css
@@ -56,7 +56,7 @@
     color: #333F48;
     padding-right: 12px;
     padding-left: 12px;
-    font-size: 1vw;
+    font-size: 1.6vh;
   }
 
   .SubAutocompleteCard{
