--- a/beams/src/components/SuburbNews.css
+++ b/beams/src/components/SuburbNews.css
@@ -1,6 +1,6 @@
 .VerticalMenu {
   width: 100%;
-  max-height: 500px;
+  max-height: 550px;
   overflow-y: auto;
   padding: 10px;
 }
