--- a/beams/src/pages/SuburbPage.css
+++ b/beams/src/pages/SuburbPage.css
@@ -1,6 +1,6 @@
 .DGGridContainer{
   width: 100%;
-  height: 460px;
+  height: 440px;
 }
 
 .StatsGridContainer{
@@ -13,12 +13,24 @@
   padding-right: 15px;
 }
 
+/* These determine width size; disables scaling */
+.SingleWholeContainer{
+  width: 1200px;
+}
+
+.MultiWholeContainer{
+  width: 1000px;
+}
+
+/* -- END -- */
+
 .DGTab{
-  padding-top: 8px;
+  padding-top: 0px;
+  width: 100%;
 }
 
 .StatsTab{
-
+  width: 100%;
 }
 
 .SubheadingContainer{
@@ -47,8 +59,8 @@
 
 .ParentContainer{
   padding-top: 10px;
-  padding-left: 48px;
-  padding-right: 48px;
+  padding-left: 6%;
+  padding-right: 6%;
 }
 
 .IconMain{
@@ -58,7 +70,7 @@
 
 .GMapsMain{
   width: 100%;
-  height: 450px;
+  height: 500px;
   padding-bottom: 36px;
   padding-top: 12px;
 }
@@ -106,25 +118,33 @@
 }
 
 .MainText{
-  vertical-align: 20px;
+  vertical-align: 22px;
   padding-left: 14px;
+}
+
+.MainTextR{
+  vertical-align: 22px;
+  padding-right: 14px;
+}
+
+.HeadingR{
+  float: right;
 }
 
 .CompareSearchContainer{
   float: right;
   z-index: 20;
-  padding-top: 8px;
+  padding-top: 21px;
 }
 
 .CompareDGText{
- margin-top: 20px;
+  padding: 20px;
 }
 
 .CompareDGTextL{
-  margin-left: 20px;
+  float: left;
 }
 
 .CompareDGTextR{
-  margin-right: 25px;
   float: right;
 }
